tests/baselines/reference/exportAssignClassAndModule.errors.txt
exportAssignClassAndModule_1.ts(6,1): error TS2454: Variable 'zz' is used before being assigned.


==== exportAssignClassAndModule_1.ts (1 errors) ====
    ///<reference path='exportAssignClassAndModule_0.ts'/>
    import Foo = require('./exportAssignClassAndModule_0');
    
    var z: Foo.Bar;
    var zz: Foo;
    zz.x;
    ~~
!!! error TS2454: Variable 'zz' is used before being assigned.
==== exportAssignClassAndModule_0.ts (0 errors) ====
    class Foo {
        x: Foo.Bar;
    }
    module Foo {
        export interface Bar {
        }
    }
    export = Foo;
    